--- a/jiaohukeji/html/us.html
+++ b/jiaohukeji/html/us.html
@@ -16,11 +16,11 @@
 		<div id="maodian"></div>
 		<header class="clearfix">
 			<div class="nav1 clearfix">
-				<h1><a href="../../Interaction%20Technology/html/index.html">交互科技</a></h1>
+				<h1><a href="../../interaction-technology/html/index.html">交互科技</a></h1>
 				<ul class="nav">
-					<li class="click"><a href="../../Interaction%20Technology/html/index.html">首页</a><span></span></li>
-					<li class="click"><a href="../../Interaction%20Technology/html/service.html">服务</a><span></span></li>
-					<li class="click"><a href="../../Interaction%20Technology/html/achievement.html">成果</a><span></span></li>
+					<li class="click"><a href="../../interaction-technology/html/index.html">首页</a><span></span></li>
+					<li class="click"><a href="../../interaction-technology/html/service.html">服务</a><span></span></li>
+					<li class="click"><a href="../../interaction-technology/html/achievement.html">成果</a><span></span></li>
 					<li class="click active"><a href="javascript:;">我们</a><span></span></li>
 					<li class="click"><a href="teach.html">课堂</a><span></span></li>
 					<li class="btn"><a href="javascript:;">我要合作</a></li>
